--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,14 +1,9 @@
-<<<<<<< HEAD
-#Fri Jun 08 15:41:57 PDT 2018
-=======
-#Wed May 23 23:14:28 PDT 2018
->>>>>>> 8d581020aa44c4c81c3f2de58af3c135c4d510cb
+#Fri Jun 08 16:16:04 PDT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=8d581020aa44c4c81c3f2de58af3c135c4d510cb
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-<<<<<<< HEAD
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
-=======
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
->>>>>>> 8d581020aa44c4c81c3f2de58af3c135c4d510cb
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
