--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 08 15:41:03 PDT 2018
-
+#Fri Jun 08 16:53:08 PDT 2018
+sdk.dir=/usr/local/google/home/aminnella/Android/Sdk
