--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+/build
+
+# contains apis
+/app/google-services.json
+
+# settings etc
 *.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
-/build
 /captures
 .externalNativeBuild
-/app/google-services.json
