--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,18 @@ gen/
 /app/google-services.json
 
 # settings etc
-.gitignore
-*.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /captures
 .externalNativeBuild
+
+# IntelliJ
+*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
