--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Jun 08 16:53:08 PDT 2018
-
+sdk.dir=/usr/local/google/home/aminnella/Android/Sdk
